# 2021-cadpoint-ru

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  deploy_to_dreamhost.md  deploy_to_masterhost-vm.md  docker-compose.local.yml  docker-compose.prod.yml  passenger_wsgi.py  pyproject.toml
.gitea/workflows/: docker-publish.yaml
cadpoint/: manage.py  requarement_dev_home.txt  requarement_dev_office.txt  requirement_dev_home_2.txt  requirement_prod_dreamhost.txt  requirement_prod_masterhost_vm.txt
cadpoint/cadpoint/: asgi.py  my_secret_example.py  requirement_prod_masterhosy_vm.txt  settings.py  urls.py  wsgi.py
cadpoint/templates/: 400.html  401.html  403.html  404.html  413.html  429.html  500.html  502.html  503.html  504.html  alltags.jinja2  base.jinja2  index.jinja2  item.jinja2  sitemap.jinja2  tmp.jinja2  under_reconstruction.html  under_reconstruction.jinja2
cadpoint/templates/blocks/: accept-cookies.jinja2  footer.jinja2  header_nav.jinja2  tags-cloud.jinja2
cadpoint/web/: add_function.py  admin.py  legacy_links.py  models.py  sitemaps.py  tests.py  views.py
cadpoint/web/management/: __init__.py
cadpoint/web/migrations/: 0001_initial.py  0001_squashed_0002_alter_tbcontent_szcontentbody_and_more.py  (+6 more)
config/nginx/: cadpoint-app--external-nginx.conf
database/: .gitignore  .gitkeep
frontend-assembly/: .gitignore  README.md  build-codemirror6.sh  package-lock.json  package.json
public/: llms.txt  robots.txt  top.mail.ru-1612438.txt  yandex_4387353ecb38e191.html
public/ media/: .gitkeep
public/media/: .gitignore
public/static/: README.md
(+9 files in other folders)
